Fix overlapping breakpoints

--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/frontpage.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/frontpage.less
@@ -73,7 +73,6 @@
     }
     width: 94%;
     margin: 0 auto;
-    height: 200px;
 
     .mobile-image{
         background-size: cover;
