--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/vars.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/vars.less
@@ -65,6 +65,6 @@
               ~"only screen and (-o-min-device-pixel-ratio: 3/2)",
               ~"only screen and (min-device-pixel-ratio: 1.5)";
 @mobile:      ~"only screen and (max-width: 768px)";
-@tablet:      ~"only screen and (min-width: 768px) and (max-width: 949px)";
+@tablet:      ~"only screen and (min-width: 769px) and (max-width: 949px)";
 @desktop:     ~"only screen and (min-width: 950px) and (max-width: 1128px)";
 @desktop-xl:  ~"only screen and (min-width: 1129px)";
